Changed monitor for widget display

--- a/Python/Ordmm_Land_widgets.ipynb
+++ b/Python/Ordmm_Land_widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a03f8da5169d4b27b705cef24f14170f",
+       "model_id": "0ab9c5a5c9a14e2ea8d4fbaf807150a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_Widget at 0x10b0ef040>"
+       "<widgets.Ordmm_Land_Widget at 0x10aa2a2e0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,14 +47,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## coupled model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cf8cf1f6a424e35862625365b20c1fe",
+       "model_id": "8d197d5134cc4e45b887f447b880e7ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,26 +75,17 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_em_Widget at 0x10a57bbe0>"
+       "<widgets.Ordmm_Land_em_Widget at 0x123a3f280>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#coupled model\n",
-    "\n",
     "importlib.reload(wid)\n",
     "wid.Ordmm_Land_em_Widget()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Coupled\n"
    ]
   },
   {
