Added celltype endo/epi/m

--- a/Python/Ordmm_Land_widgets.ipynb
+++ b/Python/Ordmm_Land_widgets.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ab9c5a5c9a14e2ea8d4fbaf807150a9",
+       "model_id": "cb3db83551d843b8a4ab538d859c71ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_Widget at 0x10aa2a2e0>"
+       "<widgets.Ordmm_Land_Widget at 0x12c3e6160>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d197d5134cc4e45b887f447b880e7ec",
+       "model_id": "1870cabedbe04bfdb0b76918765d2d6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_em_Widget at 0x123a3f280>"
+       "<widgets.Ordmm_Land_em_Widget at 0x12c278820>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
