--- a/Python/Ordmm_Land_widgets.ipynb
+++ b/Python/Ordmm_Land_widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb3db83551d843b8a4ab538d859c71ca",
+       "model_id": "3ecabf3d7e304f4783f31c06a5d36123",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_Widget at 0x12c3e6160>"
+       "<widgets.Ordmm_Land_Widget at 0x122fd00a0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
