--- a/Python/Ordmm_Land_widgets.ipynb
+++ b/Python/Ordmm_Land_widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ecabf3d7e304f4783f31c06a5d36123",
+       "model_id": "eb2c434bd5854c8ab1458a1b1ac6c9e4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, continuous_update=False, description='gNa rate (I_Na)', layout=La…"
+       "interactive(children=(Dropdown(description='Cell type:', index=2, options={'m': 2, 'epi': 1, 'endo': 0}, value…"
       ]
      },
      "metadata": {},
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_Widget at 0x122fd00a0>"
+       "<widgets.Ordmm_Land_Widget at 0x10fdee460>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1870cabedbe04bfdb0b76918765d2d6d",
+       "model_id": "216772dcec7f4aeeae75e202588013a0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, continuous_update=False, description='gNa rate (I_Na)', layout=La…"
+       "interactive(children=(Dropdown(description='Cell type:', index=2, options={'m': 2, 'epi': 1, 'endo': 0}, value…"
       ]
      },
      "metadata": {},
@@ -75,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "<widgets.Ordmm_Land_em_Widget at 0x12c278820>"
+       "<widgets.Ordmm_Land_em_Widget at 0x111e01040>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,11 +98,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Coupled model with ionic chnges acc. Gomez"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a732132b2d840e984421783e61a63b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Cell type:', index=2, options={'m': 2, 'epi': 1, 'endo': 0}, value…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<widgets.Ordmm_Land_em_mech_Widget at 0x128c6fa60>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(wid)\n",
+    "wid.Ordmm_Land_em_mech_Widget()"
+   ]
   }
  ],
  "metadata": {
