plots from iso sens analysis HF

--- a/Python/SL_test.ipynb
+++ b/Python/SL_test.ipynb
@@ -276,33 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['control_endo_coupled_iso_090.npy',\n",
-       " '.DS_Store',\n",
-       " 'control_endo_coupled_iso_095.npy',\n",
-       " 'gomez_hetero_endo_coupled_iso_100.npy',\n",
-       " 'gomez_endo_coupled_iso_100.npy',\n",
-       " 'gomez_endo_coupled_iso_110.npy',\n",
-       " 'gomez_endo_coupled_iso_105.npy',\n",
-       " 'gomez_m_coupled_iso_100.npy',\n",
-       " 'gomez_endo_coupled_iso_095.npy',\n",
-       " 'gomez_epi_coupled_iso_100.npy',\n",
-       " 'gomez_endo_coupled_iso_090.npy',\n",
-       " 'control_m_coupled_iso_100.npy',\n",
-       " 'control_endo_coupled_iso_105.npy',\n",
-       " 'control_endo_coupled_iso_110.npy',\n",
-       " 'control_endo_coupled_iso_100.npy',\n",
-       " 'control_epi_coupled_iso_100.npy',\n",
-       " 'gomez_hetero_epi_coupled_iso_100.npy',\n",
-       " 'gomez_hetero_m_coupled_iso_100.npy']"
+       "['.DS_Store',\n",
+       " 'gomez_epi_ordmm.npy',\n",
+       " 'gomez_hetero_m_ordmm.npy',\n",
+       " 'gomez_endo_ordmm.npy',\n",
+       " 'control_m_ordmm.npy',\n",
+       " 'gomez_hetero_endo_ordmm.npy',\n",
+       " 'control_endo_ordmm.npy',\n",
+       " 'control_epi_ordmm.npy',\n",
+       " 'gomez_m_ordmm.npy',\n",
+       " 'gomez_hetero_epi_ordmm.npy']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +302,7 @@
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, join\n",
-    "onlyfiles = [f for f in listdir('init_values/coupled') if isfile(join('init_values/coupled', f))]\n",
+    "onlyfiles = [f for f in listdir('init_values') if isfile(join('init_values', f))]\n",
     "\n",
     "onlyfiles"
    ]
@@ -347,31 +339,23 @@
    "source": [
     "import os \n",
     "\n",
-    "lst = ['control_endo_coupled_iso_090.npy',\n",
-    " 'control_endo_coupled_iso_095.npy',\n",
-    " 'gomez_hetero_endo_coupled_iso_100.npy',\n",
-    " 'gomez_endo_coupled_iso_100.npy',\n",
-    " 'gomez_endo_coupled_iso_110.npy',\n",
-    " 'gomez_endo_coupled_iso_105.npy',\n",
-    " 'gomez_m_coupled_iso_100.npy',\n",
-    " 'gomez_endo_coupled_iso_095.npy',\n",
-    " 'gomez_epi_coupled_iso_100.npy',\n",
-    " 'gomez_endo_coupled_iso_090.npy',\n",
-    " 'control_m_coupled_iso_100.npy',\n",
-    " 'control_endo_coupled_iso_105.npy',\n",
-    " 'control_endo_coupled_iso_110.npy',\n",
-    " 'control_endo_coupled_iso_100.npy',\n",
-    " 'control_epi_coupled_iso_100.npy',\n",
-    " 'gomez_hetero_epi_coupled_iso_100.npy',\n",
-    " 'gomez_hetero_m_coupled_iso_100.npy']\n",
+    "lst = ['gomez_epi_ordmm.npy',\n",
+    " 'gomez_hetero_m_ordmm.npy',\n",
+    " 'gomez_endo_ordmm.npy',\n",
+    " 'control_m_ordmm.npy',\n",
+    " 'gomez_hetero_endo_ordmm.npy',\n",
+    " 'control_endo_ordmm.npy',\n",
+    " 'control_epi_ordmm.npy',\n",
+    " 'gomez_m_ordmm.npy',\n",
+    " 'gomez_hetero_epi_ordmm.npy']\n",
     "\n",
     "for i in range(len(lst)):\n",
     "    p = lst[i]\n",
-    "    y_load = np.load(f'init_values/coupled/{p}'\n",
+    "    y_load = np.load(f'init_values/{p}'\n",
     "        )\n",
     "    y0 = y_load[-1]\n",
     "\n",
-    "    path = os.path.join(\"init_values/coupled\", p)\n",
+    "    path = os.path.join(\"init_values\", p)\n",
     "    np.save(path, y0, allow_pickle=True)\n",
     "    print(f'Finished and saved {p}.')"
    ]
