finished first sens analysis

--- a/Python/SL_test.ipynb
+++ b/Python/SL_test.ipynb
@@ -309,55 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished and saved control_endo_coupled_iso_090.npy.\n",
-      "Finished and saved control_endo_coupled_iso_095.npy.\n",
-      "Finished and saved gomez_hetero_endo_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_endo_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_endo_coupled_iso_110.npy.\n",
-      "Finished and saved gomez_endo_coupled_iso_105.npy.\n",
-      "Finished and saved gomez_m_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_endo_coupled_iso_095.npy.\n",
-      "Finished and saved gomez_epi_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_endo_coupled_iso_090.npy.\n",
-      "Finished and saved control_m_coupled_iso_100.npy.\n",
-      "Finished and saved control_endo_coupled_iso_105.npy.\n",
-      "Finished and saved control_endo_coupled_iso_110.npy.\n",
-      "Finished and saved control_endo_coupled_iso_100.npy.\n",
-      "Finished and saved control_epi_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_hetero_epi_coupled_iso_100.npy.\n",
-      "Finished and saved gomez_hetero_m_coupled_iso_100.npy.\n"
+      "Finished and saved gomez_epi_ordmm.npy.\n",
+      "Finished and saved gomez_hetero_m_ordmm.npy.\n",
+      "Finished and saved gomez_endo_ordmm.npy.\n",
+      "Finished and saved control_m_ordmm.npy.\n",
+      "Finished and saved gomez_hetero_endo_ordmm.npy.\n",
+      "Finished and saved control_endo_ordmm.npy.\n",
+      "Finished and saved control_epi_ordmm.npy.\n",
+      "Finished and saved gomez_m_ordmm.npy.\n",
+      "Finished and saved gomez_hetero_epi_ordmm.npy.\n"
      ]
     }
    ],
    "source": [
-    "import os \n",
     "\n",
-    "lst = ['gomez_epi_ordmm.npy',\n",
-    " 'gomez_hetero_m_ordmm.npy',\n",
-    " 'gomez_endo_ordmm.npy',\n",
-    " 'control_m_ordmm.npy',\n",
-    " 'gomez_hetero_endo_ordmm.npy',\n",
-    " 'control_endo_ordmm.npy',\n",
-    " 'control_epi_ordmm.npy',\n",
-    " 'gomez_m_ordmm.npy',\n",
-    " 'gomez_hetero_epi_ordmm.npy']\n",
-    "\n",
-    "for i in range(len(lst)):\n",
-    "    p = lst[i]\n",
-    "    y_load = np.load(f'init_values/{p}'\n",
-    "        )\n",
-    "    y0 = y_load[-1]\n",
-    "\n",
-    "    path = os.path.join(\"init_values\", p)\n",
-    "    np.save(path, y0, allow_pickle=True)\n",
-    "    print(f'Finished and saved {p}.')"
+    "\n"
    ]
   }
  ],
