finished func for population

--- a/Python/testing.ipynb
+++ b/Python/testing.ipynb
@@ -1618,6 +1618,74 @@
     "data = np.load('test_size_rand.npy')\n",
     "data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ORdmm_Land_em_coupling as model\n",
+    "from scipy.integrate import odeint\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tqdm\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "from population_func import apd_values, catd_values, tad_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cell_type' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [59], line 12\u001b[0m\n\u001b[1;32m      7\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      9\u001b[0m y0 \u001b[39m=\u001b[39m y0s[i]\n\u001b[1;32m     11\u001b[0m parameters \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39minit_parameter_values(\n\u001b[0;32m---> 12\u001b[0m     celltype\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m \u001b[39mif\u001b[39;00m cell_type \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mendo\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m cell_type \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mepi\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39m2\u001b[39m,\n\u001b[1;32m     13\u001b[0m     isometric\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m mech_type\u001b[39m==\u001b[39m\u001b[39m'\u001b[39m\u001b[39miso\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39m0\u001b[39m,\n\u001b[1;32m     14\u001b[0m     lmbda_set\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     15\u001b[0m     \u001b[39m#mechanical parameters\u001b[39;00m\n\u001b[1;32m     16\u001b[0m     ku_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m0\u001b[39m],\n\u001b[1;32m     17\u001b[0m     kuw_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m1\u001b[39m],\n\u001b[1;32m     18\u001b[0m     kws_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m2\u001b[39m],\n\u001b[1;32m     19\u001b[0m     ktrpn_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m3\u001b[39m],\n\u001b[1;32m     20\u001b[0m     Trpn50_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m4\u001b[39m],\n\u001b[1;32m     21\u001b[0m     gammaw_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m5\u001b[39m],\n\u001b[1;32m     22\u001b[0m     gammas_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m6\u001b[39m],\n\u001b[1;32m     23\u001b[0m     rs_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m7\u001b[39m],\n\u001b[1;32m     24\u001b[0m     rw_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m8\u001b[39m],\n\u001b[1;32m     25\u001b[0m     Tref_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m9\u001b[39m],\n\u001b[1;32m     26\u001b[0m     cat50ref_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m10\u001b[39m],\n\u001b[1;32m     27\u001b[0m     ntm_rate\u001b[39m=\u001b[39mrand_val[i][\u001b[39m11\u001b[39m],\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     30\u001b[0m y \u001b[39m=\u001b[39m odeint(model\u001b[39m.\u001b[39mrhs, y0, tsteps, args\u001b[39m=\u001b[39m(parameters,))\n\u001b[1;32m     31\u001b[0m monitor \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([model\u001b[39m.\u001b[39mmonitor(r, t, parameters) \u001b[39mfor\u001b[39;00m r, t \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(y, tsteps)])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cell_type' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tsteps = np.arange(0.0, 1000.0, 0.1)\n",
+    "\n",
+    "rand_val = np.load(f'rand_sample_iso_control.npy') \n",
+    "# load population\n",
+    "y0s = np.load('population_iso_control_trial.npy')\n",
+    "\n",
+    "i = 1\n",
+    "\n",
+    "y0 = y0s[i]\n",
+    "\n",
+    "parameters = model.init_parameter_values(\n",
+    "    celltype=0,\n",
+    "    isometric=1,\n",
+    "    lmbda_set=1,\n",
+    "    #mechanical parameters\n",
+    "    ku_rate=rand_val[i][0],\n",
+    "    kuw_rate=rand_val[i][1],\n",
+    "    kws_rate=rand_val[i][2],\n",
+    "    ktrpn_rate=rand_val[i][3],\n",
+    "    Trpn50_rate=rand_val[i][4],\n",
+    "    gammaw_rate=rand_val[i][5],\n",
+    "    gammas_rate=rand_val[i][6],\n",
+    "    rs_rate=rand_val[i][7],\n",
+    "    rw_rate=rand_val[i][8],\n",
+    "    Tref_rate=rand_val[i][9],\n",
+    "    cat50ref_rate=rand_val[i][10],\n",
+    "    ntm_rate=rand_val[i][11],\n",
+    ")\n",
+    "\n",
+    "y = odeint(model.rhs, y0, tsteps, args=(parameters,))\n",
+    "monitor = np.array([model.monitor(r, t, parameters) for r, t in zip(y, tsteps)])"
+   ]
   }
  ],
  "metadata": {
