--- a/Python/testing.ipynb
+++ b/Python/testing.ipynb
@@ -3136,6 +3136,41 @@
     "            \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing how i can scale catref50\n",
+    "\n",
+    "\n",
+    "# Initial states\n",
+    "\n",
+    "\n",
+    "mech_param  = 's' # cat50ref\n",
+    "hf_type = 'gomez' #'control'\n",
+    "inc = [1, 1.2]\n",
+    "\n",
+    "for i in range(10):\n",
+    "# Parameters, celltype = epi\n",
+    "    cat = 1\n",
+    "    if mech_param=='cat50ref':\n",
+    "        cat = inc[1]\n",
+    "    if hf_type=='gomez':\n",
+    "        cat *= 0.7\n",
+    "\n",
+    "print(cat)\n"
+   ]
   }
  ],
  "metadata": {
